# todo-mongodb/app.js
@@ -3,12 +3,13 @@ const express = require("express");
 const path = require("path");
 const cookieParser = require("cookie-parser");
 const logger = require("morgan");
-const db = require("./db");
+const db = require("./todo.database");
 const mongoose = require("mongoose");
 var argv = require("minimist")(process.argv.slice(2));
 var bodyParser = require("body-parser");
-const todoRoutes = require("./todo.routes");
+const {todoRoutes} = require("./src/routes");
 var cors = require("cors");
+
 
 mongoose.Promise = global.Promise;
 mongoose
@@ -31,10 +32,10 @@ app.use(cors());
 var swagger = require("swagger-node-express").createNew(subpath);
 app.use(express.static("dist"));
 swagger.setApiInfo({
-  title: "example API",
+  title: "API",
   description: "API to do something, manage something...",
   termsOfServiceUrl: "",
-  contact: "yourname@something.com",
+  contact: "khanhdang@gmail.com",
   license: "",
   licenseUrl: "",
 });
@@ -42,26 +43,24 @@ app.get("/", function (req, res) {
   res.sendFile(__dirname + "/dist/index.html");
 });
 swagger.configureSwaggerPaths("", "api-docs", "");
-	// Configure the API domain
-	var domain = 'localhost';
-	if(argv.domain !== undefined)
-	    domain = argv.domain;
-	else
-	    console.log('No --domain=xxx specified, taking default hostname "localhost".')
+// Configure the API domain
+var domain = "localhost";
+if (argv.domain !== undefined) domain = argv.domain;
+else
+  console.log(
+    'No --domain=xxx specified, taking default hostname "localhost".'
+  );
 
-	// Configure the API port
-	var port = 3123;
-	if(argv.port !== undefined)
-	    port = argv.port;
-	else
-	    console.log('No --port=xxx specified, taking default port ' + port + '.')
+// Configure the API port
+var port = 3123;
+if (argv.port !== undefined) port = argv.port;
+else console.log("No --port=xxx specified, taking default port " + port + ".");
 
-	// Set and display the application URL
-	var applicationUrl = 'http://' + domain + ':' + port;
-	console.log('snapJob API running on ' + applicationUrl);
+// Set and display the application URL
+var applicationUrl = "http://" + domain + ":" + port;
+console.log("snapJob API running on " + applicationUrl);
 
-
-	swagger.configure(applicationUrl, '1.0.0');
+swagger.configure(applicationUrl, "1.0.0");
 
 // view engine setup
 app.set("views", path.join(__dirname, "views"));
@@ -73,7 +72,7 @@ app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 app.use(express.static(path.join(__dirname, "public")));
 // set route for todo
-app.use("/todo", todoRoutes);
+app.use("/todo-list", todoRoutes);
 
 // catch 404 and forward to error handler
 app.use(function (req, res, next) {
@@ -90,8 +89,8 @@ app.use(function (err, req, res, next) {
   res.status(err.status || 500);
   res.render("error");
 });
-
-// app.listen(app.get("port"), function () {
-//   console.log("Server is running on port: http://localhost:" + app.get("port"));
-// });
-app.listen(process.env.PORT || 3123);
+app.set("port", 3123);
+app.listen(app.get("port") || 3123, function () {
+  console.log("Server is running on port: http://localhost:" + app.get("port"));
+});
+// app.listen(process.env.PORT || 3123);
